# django-passkey-auth

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
passkeys/: __init__.py  apps.py  models.py  urls.py
passkeys/templates/admin/: base.html  login.html
src/passkeys/: __init__.py  admin.py  backend.py  fields.py  models.py  urls.py  utils.py  views.py
src/passkeys/management/commands/: reset_passkeys.py
src/passkeys/migrations/: 0001_initial.py  0002_passkey_last_used_passkey_name.py
src/passkeys/static/passkeys/: passkeys.js
src/passkeys/templates/admin/: base.html  login.html
