[project]
name = "django-passkey-auth"
version = "0.2.0"
authors = [
    {name = "Dan Watson", email = "dcwatson@gmail.com"},
]
description = "Passkey authentication for Django"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "django>=4.2",
    "fido2",
]

[project.urls]
Repository = "https://github.com/dcwatson/django-passkey-auth"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "passkeys"
